--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="mobilebuttons">
-            <button class="mobilesearch"><img src="/imgs/search-icon.svg" alt="search"></button>
+            <button class="mobilesearch"><img src="imgs/search-icon.svg" alt="search"></button>
             <button class="burger">
                 <div class="menuline"></div>
                 <div class="menuline"></div>
